--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <section id="introduction">
   <div class="container">
   <div class="row fill-viewport">
+  <div class="row fill-viewport align-items-center">
   <div class="row">
     <div class="col-12">
       <h1>Coding on steroids</h1>
@@ -26,6 +27,7 @@ magically solves all your problems and algorithms.</p>
   </div>
    </div>
   </div>
+</div>
 </section>
 
    </body>
