--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
               rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
               crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" type="text/css" href="style/style.css">
 
   </head>  
@@ -118,6 +119,46 @@ Just use the 1kb script that magically solves all your problems and algorithms.<
   </div>
   </div>
 </section>
+
+
+
+
+
+
+<section id="featured-on" class="bg-primary">
+  <div class="container">
+  <div class="row py-5 text-center text-white">
+    <div class="col-12">
+        <i class="fab fa-twitter-square" 
+          aria-hidden="true"></i>
+       <i class="fab fa-facebook-square" 
+          aria-hidden="true"></i>
+        <i class="fab fa-instagram-square" 
+          aria-hidden="true"></i>
+        <i class="fab fa-twitch" 
+          aria-hidden="true"></i>
+        <i class="fab fa-reddit-square" 
+          aria-hidden="true"></i>
+        <i class="fab fa-cc-paypal" 
+          aria-hidden="true"></i>
+        <i class="fab fa-tumblr-square" 
+          aria-hidden="true"></i>
+        <i class="fab fa-cc-apple-pay" 
+          aria-hidden="true"></i>
+    </div>
+  </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
 
 
