--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Just use the 1kb script that magically solves all your problems and algorithms.<
           aria-hidden="true"></i>
        <i class="fab fa-facebook-square" 
           aria-hidden="true"></i>
-        <i class="fab fa-instagram-square" 
+        <i class="fab fa-instagram" 
           aria-hidden="true"></i>
         <i class="fab fa-twitch" 
           aria-hidden="true"></i>
